@@ -24,7 +24,7 @@
   <div class="control-group">
     <%= f.label :doctor_type, class: 'control-label' %>
     <div class="controls">
-      <%= f.text_field :doctor_type %>
+      <%= f.select :doctor_type, [['---', nil]] + Doctor::DOCTOR_TYPE %>
     </div>
   </div>
   <div class="control-group">
