@@ -8,7 +8,7 @@
     <dt>Clinic</dt>
     <dd><%= @prescreen.clinic.name %></dd>
 
-    <dt>Cardiologist</dt>
+    <dt>Doctor</dt>
     <dd><%= @prescreen.doctor.name %></dd>
 
     <% unless @prescreen.exclusion_name.blank? %>
