@@ -31,7 +31,7 @@
   </div>
 
   <div class="control-group">
-    <%= f.label :doctor_id, 'Cardiologist', class: 'control-label' %>
+    <%= f.label :doctor_id, nil, class: 'control-label' %>
     <div class="controls">
       <%= f.select :doctor_id, Doctor::doctor_select %>
     </div>
