@@ -19,7 +19,7 @@
     <table class="blank padded" style="width:100%;table-layout:fixed">
       <thead>
         <tr>
-          <th style="text-align:left">Cardiologist</th>
+          <th style="text-align:left">Doctor</th>
         </tr>
         <tr>
           <th style="text-align:left">Appointment Time</th>
