@@ -17,7 +17,7 @@
   <dt>Clinic</dt>
   <dd><%= @prescreen.clinic.name %></dd>
 
-  <dt>Cardiologist</dt>
+  <dt>Doctor</dt>
   <dd><%= @prescreen.doctor.name %></dd>
 
   <dt>Visit at</dt>
